--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +13,33 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+hr {
+  border: 7px solid #595b83;
+  border-radius: 3px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type='text'] {
+  width: 70%;
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 10px;
+}
+
+input[type='number'] {
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 10px;
+}
+
+input[type='submit'] {
+  padding: 5px 15px;
+  margin: 15px 0;
+  background: #16c79a;
+  border: 0 none;
+  cursor: pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  width: 10em;
+  height: 3em;
+  font-size: large;
 }
